Completing abstract and discussion sections

--- a/paper/paper.qmd
+++ b/paper/paper.qmd
@@ -1,12 +1,12 @@
 ---
-title: "Capturing the True Value of Real Estate in Seattle Using Property Characteristics: A Machine Learning Approach"
+title: "Capturing the True Value of Real Estate in Seattle Through Property Characteristics: A Machine Learning Approach"
 subtitle: "Location and Age Prove Key Determinants in Calculating Intrinsic Value"
 author:
   - Sameeck Bhatia
 date: today
 date-format: long
 thanks: "Code and data are available at [https://github.com/SameeckBhatia/Seattle-Real-Estate](https://github.com/SameeckBhatia/Seattle-Real-Estate)"
-abstract: "**TO-DO:** Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi faucibus ipsum dolor, in tincidunt justo tempor sit amet proin non turpis a orci imperdiet pretium. Aenean aliquam eros eu consectetur cursus. Proin vel tempor ante vestibulum felis nisi, ultricies sed porttitor in, viverra nec augue. Sed convallis a tortor in pretium. Vivamus metus ipsum, faucibus vitae turpis sed, sodales auctor dolor sed a orci id orci pulvinar tincidunt sed ut tellus. Morbi venenatis tempor arcu, a auctor dolor congue sit amet. Nam auctor tincidunt ligula rutrum aliquam. Sed facilisis at nulla et posuere."
+abstract: "This paper develops a transparent property valuation model for Seattle’s real estate market, using Redfin data and statistical techniques to estimate intrinsic property values. The model highlights key factors influencing prices, including amenities, neighborhood characteristics, and socio-economic trends, offering an accessible tool for informed decision-making. Results show higher prediction errors for high-value properties and reveal time-related trends, with vintage homes gaining value due to historical significance. Spatial analysis captures disparities in property values, reflecting income and infrastructure differences across neighborhoods."
 toc: true
 number-sections: true
 bibliography: references.bib
@@ -37,9 +37,9 @@ library(sf)
 
 # Introduction
 
-Seattle’s real estate market has experienced significant fluctuations since the start of the millennium. Despite these booms and busts, property prices in Seattle remain among the highest in the United States. Demand has steadily increased, and even during periods of lower demand, the market continues to attract buyers. At current price levels, more potential homebuyers are seeking reliable information to find the best deals. With advancements in technology and the increasing availability of data, tools for assessing property values have become essential. One critical tool is an estimate of a property’s fair value, which can help buyers determine whether they are overpaying or underpaying relative to the market.
+Seattle’s real estate market has experienced significant fluctuations since the start of the millennium. Despite these booms and busts, property prices in Seattle remain among the highest in the United States [@jones]. Demand has steadily increased, and even during periods of lower demand, the market continues to attract buyers. At current price levels, more potential homebuyers are seeking reliable information to find the best deals. With advancements in technology and the increasing availability of data, tools for assessing property values have become essential. One critical tool is an estimate of a property’s fair value, which can help buyers determine whether they are overpaying or underpaying relative to the market.
 
-This paper focuses on developing an accurate and accessible property valuation model tailored to Seattle’s housing market. The model incorporates current market data to provide fair value estimates for individual properties. The goal is to inform readers about the key factors driving real estate prices in Seattle while empowering them with a tool to make better home-buying decisions. By applying machine learning and statistical techniques, the model aims to ensure accuracy and reflect the intrinsic value of properties rather than merely their market prices. Existing valuation tools, such as Zillow’s “Zestimate” and Redfin’s proprietary estimates, have limitations. These models are often closed-source, leaving potential users unable to access the methodology or even the results without cost. This creates a significant gap in the availability of open, free, and transparent valuation tools. The absence of such tools denies buyers the advantage of comprehensive, unbiased information to assess property values independently. To address this gap, data was collected from Redfin’s semi-public dataset on current Seattle property listings. The analysis was conducted using the R programming language for data cleaning, testing, model creation, and result interpretation.
+This paper focuses on developing an accurate and accessible property valuation model tailored to Seattle’s housing market. The model incorporates current market data to provide fair value estimates for individual properties. The goal is to inform readers about the key factors driving real estate prices in Seattle while empowering them with a tool to make better home-buying decisions. By applying machine learning and statistical techniques, the model aims to ensure accuracy and reflect the intrinsic value of properties rather than merely their market prices. Existing valuation tools, such as Zillow’s “Zestimate” [@zillow] and Redfin’s proprietary estimates, have limitations. These models are often closed-source, leaving potential users unable to access the methodology or even the results without cost. This creates a significant gap in the availability of open, free, and transparent valuation tools. The absence of such tools denies buyers the advantage of comprehensive, unbiased information to assess property values independently. To address this gap, data was collected from Redfin’s semi-public dataset on current Seattle property listings. The analysis was conducted using the R programming language for data cleaning, testing, model creation, and result interpretation.
 
 The primary estimand of this paper is the intrinsic value of a property. This value is determined using a linear regression model applied to observational data collected across Seattle. The analysis aims to identify the true value of a property that a buyer should consider paying and a seller should consider accepting. Additionally, it examines the main factors influencing a property’s intrinsic value and allows for comparison to market values.
 
@@ -95,11 +95,11 @@ The primary goal of this paper is to estimate the outcome variable, price, using
 
 ## Predictor Variables
 
-**Property Type (`property_type`):** This categorical variable identifies the type of property for each observation, based on classifications set by the MLS. The three main property types included in the analysis are "Condo/Co-op," "Single Family," and "Townhouse." These classifications are critical for valuation, as different property types possess distinct features that influence their market value.
+**Property Type (`property_type`):** This categorical variable identifies the type of property for each observation, based on classifications set by the MLS. The three main property types included in the analysis are "Condo/Co-op," "Single Family," and "Townhouse." These classifications are important for valuation, as different property types possess distinct features that influence their market value.
 
 **Number of Bedrooms (`beds`):** This numeric variable represents the count of full bedrooms in a property, as measured by appraisers. It is a key factor in the analysis, as more bedrooms often correlate with greater living space and the potential to accommodate larger households.
 
-**TO-DO:** Number of Bathrooms (`baths`): This numeric variable represents the count of full bathrooms in a property, as measured by appraisers. It is a key factor in the analysis, as more bathrooms often correlate with greater living space and the potential to accommodate larger households.
+**Number of Bathrooms (`baths`):** This variable represents the total count of full bathrooms in a property, as measured by appraisers. Properties with more bathrooms typically appeal to larger households, and is sometimes caused by the number of bedrooms in a property, leading to correlated prices.
 
 **Property Size (`sqft`):** Measured in square feet, this variable reflects the total size of the property and is determined by appraisers. As the United States predominantly uses the imperial system, square footage is a standard unit. Larger properties generally hold more value, making this a significant predictor in property valuation.
 
@@ -262,7 +262,7 @@ testing_data |>
   )
 ```
 
-@fig-scatter shows the model-predicted prices alongside the actual price observations from the data. The dashed line represents the line of equality, where the predicted price matches the actual property price. Some data points deviate from this line, particularly at lower values, which is expected since no model can perfectly capture all variations in the data. In this case, the deviations may result from missing factors that could enhance the property valuation model. However, when property values exceed approximately 2 million dollars, the actual prices deviate significantly from the line of equality. This indicates higher prediction errors, likely due to a combination of internal and external factors. Internal factors might include additional amenities (e.g., pools, large gardens, or extra rooms) or premium furnishings (e.g., expensive flooring or tiling), which increase lot size or property desirability, driving up prices. External factors may include the property’s location in high-income neighborhoods or proximity to desirable features such as beaches, shopping malls, or tourist attractions. These influences are analyzed further in @fig-map.
+@fig-scatter shows the model-predicted prices alongside the actual price observations from the data. The dashed line represents the line of equality, where the predicted price matches the actual property price. Some data points deviate from this line, particularly at lower values, which is expected since no model can perfectly capture all variations in the data. In this case, the deviations may result from missing factors that could enhance the property valuation model. However, when property values exceed approximately 2 million dollars, the actual prices deviate significantly from the line of equality. This indicates higher prediction errors, likely due to a combination of internal and external factors. Internal factors might include additional amenities (e.g., pools, large gardens, or extra rooms) or premium furnishings (e.g., expensive flooring or tiling), which increase lot size or property desirability [@narPool], driving up prices. External factors may include the property’s location in high-income neighborhoods or proximity to desirable features such as beaches, shopping malls, or tourist attractions. These influences are analyzed further in @fig-map.
 
 ## Similar Distributions to Market Price from the Model
 
@@ -294,7 +294,7 @@ testing_data |>
   )
 ```
 
-@fig-box illustrates the distributions of actual and predicted prices based on MLS-classified property types. Condos have the lowest median prices, followed by townhouses, with single-family homes being the most expensive. This pricing trend is primarily influenced by the size of each property type, which plays a significant role in determining value. The predicted and actual distributions for all property types show similar shapes, although there are differences in their centers and outliers. The model predicts slightly higher intrinsic values for townhouses and condos compared to the actual prices, whereas there is a notable difference in the median price for single-family homes. This discrepancy is likely due to the real estate market being in a cooling phase, with prices remaining relatively stable over the past six months. Additionally, while market prices are subject to short-term fluctuations, intrinsic values tend to remain more consistent.
+@fig-box illustrates the distributions of actual and predicted prices based on MLS-classified property types. Condos have the lowest median prices, followed by townhouses, with single-family homes being the most expensive. This pricing trend is primarily influenced by the size of each property type, which plays a significant role in determining value [@apartmentlist]. The predicted and actual distributions for all property types show similar shapes, although there are differences in their centers and outliers. The model predicts slightly higher intrinsic values for townhouses and condos compared to the actual prices, whereas there is a notable difference in the median price for single-family homes. This discrepancy is likely due to the real estate market being in a cooling phase [@weisbarth], with prices remaining relatively stable over the past six months. Additionally, while market prices are subject to short-term fluctuations, intrinsic values tend to remain more consistent.
 
 ## Influence of the Time Effect on Property Valuation
 
@@ -328,7 +328,7 @@ testing_data |>
   )
 ```
 
-@fig-age highlights the trend between property age and the predicted and actual average prices. The relationship can be divided into three stages. First, the average price for brand-new properties starts at around 1 million dollars, followed by a gradual decrease as the properties age. This decline is expected, as older properties typically lose value due to higher upkeep costs and reduced desirability. Next, the average price bottoms out when properties reach around 40 years of age. This likely represents a threshold where property age significantly affects market value (for actual prices) or true value (for predicted prices). In the third stage, average prices increase for properties over 50 years old, continuing to rise for homes built a century ago. While this may seem counterintuitive given the earlier trend, it likely reflects the premium placed on vintage properties. Such homes often have historical significance, unique architectural features, or are built on highly desirable land, all of which enhance their perceived and intrinsic value.
+@fig-age highlights the trend between property age and the predicted and actual average prices. The relationship can be divided into three stages. First, the average price for brand-new properties starts at around 1 million dollars, followed by a gradual decrease as the properties age. This decline is expected, as older properties typically lose value due to higher upkeep costs and reduced desirability [@coulson]. Next, the average price bottoms out when properties reach around 40 years of age. This likely represents a threshold where property age significantly affects market value (for actual prices) or true value (for predicted prices). In the third stage, average prices increase for properties over 50 years old, continuing to rise for homes built a century ago. While this may seem counterintuitive given the earlier trend, it likely reflects the premium placed on vintage properties. Such homes often have historical significance, unique architectural features, or are built on highly desirable land, all of which enhance their perceived and intrinsic value.
 
 ## Noticeable Clusters for High-End Properties
 
@@ -371,7 +371,7 @@ testing_data |>
   labs(fill = "Median Price \n($ millions)")
 ```
 
-@fig-map presents the spatial distribution of median property values across Seattle, categorized by ZIP code. Two distinct patterns emerge from both maps: first, two ZIP codes stand out with the highest median listing prices; second, property values decrease the farther south they are in the city. The model captures these patterns well, showing similar clusters. The two ZIP codes with the darkest shades correspond to the Broadmoor and Broadview neighborhoods, which are 85- and 1,100-acre gated communities with affluent residents and amenities such as golf courses. These communities share features like higher incomes, better security, and a higher standard of living, enabling them to support significantly higher property values. Conversely, neighborhoods in southern Seattle tend to have lower incomes, higher crime rates, and less development, and evidently lower property values. These factors collectively explain the disparities in property values across the city. These disparities reflect broader socio-economic trends in urban areas, where wealthier neighborhoods often attract more investment in infrastructure, public services, and amenities, driving property values higher.
+@fig-map presents the spatial distribution of median property values across Seattle, categorized by ZIP code. Two distinct patterns emerge from both maps: first, two ZIP codes stand out with the highest median listing prices; second, property values decrease the farther south they are in the city. The model captures these patterns well, showing similar clusters. The two ZIP codes with the darkest shades correspond to the Broadmoor and Broadview neighborhoods, which are 85- and 1,100-acre gated communities with affluent residents and amenities such as golf courses. These communities share features like higher incomes, better security, and a higher standard of living, enabling them to support significantly higher property values. Conversely, neighborhoods in southern Seattle tend to have lower incomes, higher crime rates, and less development, and evidently lower property values. These factors collectively explain the disparities in property values across the city. These disparities reflect broader socio-economic trends in urban areas, where wealthier neighborhoods often attract more investment in infrastructure, public services, and amenities, driving property values higher [@kim].
 
 \newpage
 
@@ -379,21 +379,21 @@ testing_data |>
 
 ## Examining Racial Bias in Real Estate Price Estimates
 
-**TO-DO:** Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eget purus eleifend, vehicula dolor vitae, aliquet nibh. Curabitur ac leo non nunc ultrices dignissim. Phasellus faucibus elit id nulla pretium volutpat. Proin ullamcorper, nulla sit amet tempor faucibus, mi ligula interdum urna, eu condimentum arcu augue nec leo. Curabitur vulputate imperdiet nulla eu finibus. Vivamus sem lectus, commodo in lectus quis, posuere laoreet quam. Etiam nunc libero, faucibus nec porta a, dignissim a nisi. Phasellus laoreet elementum turpis a vestibulum. Quisque in urna varius, lobortis eros eu, blandit sapien. In lobortis orci id nunc facilisis, non tempor nisl ultricies. Sed pellentesque tortor cursus ipsum fringilla interdum. Cras lacinia tempor placerat. Proin eu elit elit. Sed molestie dolor et posuere sodales.
+The integration of algorithmic estimates like Zillow’s Zestimate into real estate markets offers potential to reduce racial biases in property valuation [@yu]. Historically, systemic practices such as redlining have resulted in undervaluation of properties in minority neighborhoods, reinforcing economic disparities. The Zestimate, which aggregates data from multiple sources and provides consistent valuations across neighborhoods, appears less influenced by these historical biases. As a public and standardized information source, it helps market participants align on property values, leading to reduced racial disparities in final sale prices compared to initial list prices. This effect is especially meaningful in addressing the “white premium” often observed in traditional valuation methods.
 
-Fusce aliquam tempus tincidunt. Nulla viverra non nibh consectetur blandit. Proin malesuada, nunc et accumsan pellentesque, odio felis molestie augue, nec gravida lectus ipsum ut lectus. Donec at malesuada purus. Cras ultrices vitae metus eget aliquet. Aliquam sollicitudin elit placerat, porta mauris in, semper felis. Nulla vestibulum dolor sed tempor efficitur. In bibendum libero ex, in sollicitudin arcu maximus porttitor. Pellentesque ac sapien sit amet magna ornare auctor. In hac habitasse platea dictumst. Cras ut urna dapibus elit mattis aliquam non sed augue. Suspendisse lacinia ornare consectetur. Quisque ultricies tortor non ullamcorper porta. Mauris ac leo quis lacus tincidunt cursus ut id felis.
+However, while the Zestimate mitigates some biases, it does not entirely eliminate racial inequities in the housing market. Factors like historical undervaluation and socio-economic disparities remain deeply embedded, requiring more targeted interventions beyond algorithmic tools. Moreover, reliance on algorithmic estimates can sometimes oversimplify the nuanced factors that influence property values, such as cultural significance or community dynamics, which are more difficult to quantify. Nevertheless, the use of transparent and publicly available valuation tools represents a positive step toward a more equitable real estate market.
 
 ## Using Alternative Algorithms for Nonlinear Price Trends
 
-**TO-DO:** Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eget purus eleifend, vehicula dolor vitae, aliquet nibh. Curabitur ac leo non nunc ultrices dignissim. Phasellus faucibus elit id nulla pretium volutpat. Proin ullamcorper, nulla sit amet tempor faucibus, mi ligula interdum urna, eu condimentum arcu augue nec leo. Curabitur vulputate imperdiet nulla eu finibus. Vivamus sem lectus, commodo in lectus quis, posuere laoreet quam. Etiam nunc libero, faucibus nec porta a, dignissim a nisi. Phasellus laoreet elementum turpis a vestibulum. Quisque in urna varius, lobortis eros eu, blandit sapien. In lobortis orci id nunc facilisis, non tempor nisl ultricies. Sed pellentesque tortor cursus ipsum fringilla interdum. Cras lacinia tempor placerat. Proin eu elit elit. Sed molestie dolor et posuere sodales.
+Machine learning techniques have become invaluable for modeling non-linear trends in property prices, capturing the complex relationships between property characteristics, location, and market factors. Traditional methods, such as linear price models, often struggle with these complexities, especially when spatial dependencies at regional levels influence property values. Advanced algorithms like Random Forest and Gradient Boosting have shown promise in addressing these challenges. By using data at finer geographical scales, such as statistical sub-areas, these models achieve greater accuracy, particularly when predicting price differences between housing types like apartments and standalone homes. This spatially informed approach helps stakeholders understand localized price trends and refine policy-making [@gao].
 
-Fusce aliquam tempus tincidunt. Nulla viverra non nibh consectetur blandit. Proin malesuada, nunc et accumsan pellentesque, odio felis molestie augue, nec gravida lectus ipsum ut lectus. Donec at malesuada purus. Cras ultrices vitae metus eget aliquet. Aliquam sollicitudin elit placerat, porta mauris in, semper felis. Nulla vestibulum dolor sed tempor efficitur. In bibendum libero ex, in sollicitudin arcu maximus porttitor. Pellentesque ac sapien sit amet magna ornare auctor. In hac habitasse platea dictumst. Cras ut urna dapibus elit mattis aliquam non sed augue. Suspendisse lacinia ornare consectetur. Quisque ultricies tortor non ullamcorper porta. Mauris ac leo quis lacus tincidunt cursus ut id felis.
+Emerging methods like Artificial Neural Networks and Fuzzy Inference Systems further enhance the ability to capture non-linear patterns in real estate data. Recent developments in fuzzy regression techniques have demonstrated superior performance in predicting prices while maintaining lower computational costs compared to older models. These approaches excel at interpreting complex interactions between pricing attributes and property values, offering improved precision even for less structured data like textual property descriptions. Such innovations highlight the growing potential of machine learning to address long-standing challenges in real estate valuation, providing better tools for buyers, sellers, and policymakers to navigate market dynamics [@sarip].
 
 ## Including External Factors into Property Valuation Models
 
-**TO-DO:** Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eget purus eleifend, vehicula dolor vitae, aliquet nibh. Curabitur ac leo non nunc ultrices dignissim. Phasellus faucibus elit id nulla pretium volutpat. Proin ullamcorper, nulla sit amet tempor faucibus, mi ligula interdum urna, eu condimentum arcu augue nec leo. Curabitur vulputate imperdiet nulla eu finibus. Vivamus sem lectus, commodo in lectus quis, posuere laoreet quam. Etiam nunc libero, faucibus nec porta a, dignissim a nisi. Phasellus laoreet elementum turpis a vestibulum. Quisque in urna varius, lobortis eros eu, blandit sapien. In lobortis orci id nunc facilisis, non tempor nisl ultricies. Sed pellentesque tortor cursus ipsum fringilla interdum. Cras lacinia tempor placerat. Proin eu elit elit. Sed molestie dolor et posuere sodales.
+Incorporating external environmental factors into property valuation models offers valuable advantages, such as a more comprehensive understanding of real estate prices influenced by location-specific qualities [@din] [@abelson]. Geographic information systems (GIS) provide detailed data on factors like neighborhood quality, proximity to amenities, and environmental conditions, enabling models to quantify their impact on property values. For example, positive attributes such as good views or access to shops can enhance valuation, while disamenities like noise pollution may reduce it. These factors add depth to traditional models, ensuring they reflect localized preferences and market trends, which is particularly helpful for urban planning and decision-making.
 
-Fusce aliquam tempus tincidunt. Nulla viverra non nibh consectetur blandit. Proin malesuada, nunc et accumsan pellentesque, odio felis molestie augue, nec gravida lectus ipsum ut lectus. Donec at malesuada purus. Cras ultrices vitae metus eget aliquet. Aliquam sollicitudin elit placerat, porta mauris in, semper felis. Nulla vestibulum dolor sed tempor efficitur. In bibendum libero ex, in sollicitudin arcu maximus porttitor. Pellentesque ac sapien sit amet magna ornare auctor. In hac habitasse platea dictumst. Cras ut urna dapibus elit mattis aliquam non sed augue. Suspendisse lacinia ornare consectetur. Quisque ultricies tortor non ullamcorper porta. Mauris ac leo quis lacus tincidunt cursus ut id felis.
+However, using external factors also poses challenges. Data collection for environmental parameters is resource-intensive and may require frequent updates to stay relevant. Additionally, interpreting these factors can be complex, as their effects vary by region and buyer priorities. For instance, while some buyers prioritize neighborhood aesthetics, others might value proximity to public transport more. Simplifying these influences into a single measure, like a geo-index, may overlook important nuances, leading to inaccuracies in valuation. Furthermore, reliance on advanced tools like artificial neural networks increases model complexity, requiring specialized expertise and computational power, which may not be feasible for all users.
 
 \newpage
 
@@ -438,7 +438,7 @@ data_dictionary <- data.frame(
     "End time of the next scheduled open house, if available.",
     "URL to additional property details.",
     "Source of the property data (e.g., MLS, Zillow).",
-    "Multiple Listing Service (MLS) identification number for the property.",
+    "Multiple Listing Service identification number for the property.",
     "Indicates whether the property is marked as a favorite (e.g., Y/N).",
     "Indicates whether the user has expressed interest in the property (e.g., Y/N).",
     "Latitude of the property location for geospatial analysis.",
@@ -464,23 +464,30 @@ qqnorm(resid(final_model), cex = 0.5);qqline(resid(final_model))
 
 **TO-DO:** @fig-diagnostics ipsum dolor sit amet, consectetur adipiscing elit. Duis vitae pretium velit. Etiam fermentum enim ac venenatis fringilla. Nulla imperdiet metus ac ligula ultricies, at cursus eros varius. Curabitur commodo pretium ornare. Pellentesque ultrices sapien ut lectus viverra placerat. Mauris nec interdum tortor. Cras posuere turpis sed mi blandit dictum. Etiam accumsan ipsum quis sem ornare cursus. Aenean ligula mauris, vulputate a volutpat dapibus, consectetur a lacus. Nullam ornare placerat risus, in luctus urna. Ut molestie dignissim turpis, eget tincidunt arcu. Vivamus auctor fermentum lectus, eu vulputate tortor volutpat et. Aenean aliquam nulla eget felis faucibus faucibus ut nec nisi.
 
-\newpage
-
 ## Alternate Model Summaries
 
 **TO-DO:** @tbl-models ipsum dolor sit amet, consectetur adipiscing elit. Duis vitae pretium velit. Etiam fermentum enim ac venenatis fringilla. Nulla imperdiet metus ac ligula ultricies, at cursus eros varius. Curabitur commodo pretium ornare. Pellentesque ultrices sapien ut lectus viverra placerat. Mauris nec interdum tortor. Cras posuere turpis sed mi blandit dictum. Etiam accumsan ipsum quis sem ornare cursus. Aenean ligula mauris, vulputate a volutpat dapibus, consectetur a lacus. Nullam ornare placerat risus, in luctus urna. Ut molestie dignissim turpis, eget tincidunt arcu. Vivamus auctor fermentum lectus, eu vulputate tortor volutpat et. Aenean aliquam nulla eget felis faucibus faucibus ut nec nisi.
 
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis vitae pretium velit. Etiam fermentum enim ac venenatis fringilla. Nulla imperdiet metus ac ligula ultricies, at cursus eros varius. Curabitur commodo pretium ornare. Pellentesque ultrices sapien ut lectus viverra placerat. Mauris nec interdum tortor. Cras posuere turpis sed mi blandit dictum. Etiam accumsan ipsum quis sem ornare cursus. Aenean ligula mauris, vulputate a volutpat dapibus, consectetur a lacus. Nullam ornare placerat risus, in luctus urna. Ut molestie dignissim turpis, eget tincidunt arcu. Vivamus auctor fermentum lectus, eu vulputate tortor volutpat et. Aenean aliquam nulla eget felis faucibus faucibus ut nec nisi.
+
 ```{r #tbl-models}
 modelsummary(list(
   "Full" = full_model,
-  "Reduced" = reduced_model), 
+  "Reduced" = reduced_model),
+  gof_omit = "BIC|AIC|Log.Lik.",
   output = "kableExtra") |>
   column_spec(2, width = "2in")
 ```
 
+\newpage
+
 # Surveys, Sampling, and Observational Data
 
 **TO-DO:** Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce eu hendrerit mauris, in sodales mi. Aenean eget urna rutrum, tristique lorem vel, maximus ipsum. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nunc eget rutrum est. Donec tempor elit non nulla cursus, in consectetur est ullamcorper. Nam vitae porttitor felis, tempor maximus leo. Aenean ultricies molestie facilisis. Donec eget gravida eros, sit amet ornare erat. Cras a vehicula nibh. Nunc ac ligula malesuada, bibendum ante eu, luctus felis. Proin in tellus eu diam aliquam ultricies.
+
+Duis sit amet augue sagittis, commodo eros sollicitudin, congue libero. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Maecenas convallis erat velit, eu consequat massa posuere et. Nullam tempor purus sit amet quam lacinia euismod. Praesent sagittis risus sit amet odio porttitor, eget pellentesque turpis luctus. Proin feugiat convallis diam, id vulputate mauris. Nunc facilisis quam nec tristique pellentesque. Sed laoreet tortor at ipsum faucibus iaculis. Sed cursus convallis molestie. Aliquam et accumsan tortor. Morbi volutpat rutrum elit sed fermentum. In vestibulum placerat eros, et consectetur lacus fringilla a. Mauris elementum velit vel eros placerat, eget commodo nisi convallis. Sed ac nisi mi. Nullam malesuada auctor semper.
+
+Vestibulum at tortor ipsum. Quisque a elit ut odio suscipit fringilla ac ut nunc. Vivamus eget neque vel est iaculis sollicitudin in et turpis. Pellentesque quis risus ullamcorper metus porta viverra. In hac habitasse platea dictumst. In faucibus, sapien sed placerat semper, sapien lectus placerat leo, sit amet tempus risus dolor non erat. Morbi ac urna venenatis, pellentesque odio vel, iaculis tellus. Etiam tincidunt fringilla suscipit. Donec fermentum sollicitudin metus, quis tempor leo elementum eu.
 
 Duis sit amet augue sagittis, commodo eros sollicitudin, congue libero. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Maecenas convallis erat velit, eu consequat massa posuere et. Nullam tempor purus sit amet quam lacinia euismod. Praesent sagittis risus sit amet odio porttitor, eget pellentesque turpis luctus. Proin feugiat convallis diam, id vulputate mauris. Nunc facilisis quam nec tristique pellentesque. Sed laoreet tortor at ipsum faucibus iaculis. Sed cursus convallis molestie. Aliquam et accumsan tortor. Morbi volutpat rutrum elit sed fermentum. In vestibulum placerat eros, et consectetur lacus fringilla a. Mauris elementum velit vel eros placerat, eget commodo nisi convallis. Sed ac nisi mi. Nullam malesuada auctor semper.
 
