--- a/paper/references.bib
+++ b/paper/references.bib
@@ -54,3 +54,113 @@
   year = {2024},
   url = {https://www.nar.realtor/magazine/tools/client-education/handouts-for-buyers/what-to-know-about-the-appraisal-process}
 }
+
+@misc{narPool,
+  title = {Remodeling Impact Report: Outdoor Features},
+  author = {National Association of Realtors},
+  year = {2024},
+  url = {https://www.nar.realtor/research-and-statistics/research-reports/remodeling-impact-report-outdoor-features},
+}
+
+@misc{apartmentlist,
+  title = {Townhouse vs Apartment},
+  author = {Apartment List},
+  year = {2024},
+  url = {https://www.apartmentlist.com/renter-life/townhouse-vs-apartment},
+}
+
+@misc{weisbarth,
+  title = {Seattle Real Estate Market Trends in 2024: What Buyers Should Know},
+  author = {Weisbarth Real Estate},
+  year = {2024},
+  url = {https://www.weisbarth.com/post/seattle-real-estate-market-trends-in-2024-what-buyers-should-know#:~:text=For%20years%2C%20Seattle%20has%20been,growth%20seen%20in%20previous%20years.},
+}
+
+@article{coulson,
+  title = {Estimating time, age and vintage effects in housing prices},
+  author = {Coulson, {N. Edward} and McMillen, {Daniel P.}},
+  year = {2008},
+  doi = {10.1016/j.jhe.2008.03.002},
+  volume = {17},
+  pages = {138--151},
+  journal = {Journal of Housing Economics},
+}
+
+@article{kim,
+  title = {Spatial distribution of neighborhood-level housing prices and its association with all-cause mortality in Seoul, Korea (2013-2018): A spatial panel data analysis},
+  author = {Kim, Ikhan},
+  journal = {SSM - Population Health},
+  year = {2021},
+  volume = {16},
+  pages = {100963},
+  doi = {10.1016/j.ssmph.2021.100963},
+  url = {https://doi.org/10.1016/j.ssmph.2021.100963}
+}
+
+@misc{jones,
+  title = {Cities with Highest Home Price-to-Income Ratios},
+  author = {Jonathan Jones},
+  year = {2024},
+  url = {https://constructioncoverage.com/research/cities-with-highest-home-price-to-income-ratios},
+}
+
+@misc{zillow,
+  title = {What is a Zestimate?},
+  author = {Zillow},
+  year = {2024},
+  url = {https://www.zillow.com/z/zestimate/},
+}
+
+@article{yu,
+  title = {Algorithmic Outputs as Information Source: The Effects of Zestimates on Home Prices and Racial Bias in the Housing Market},
+  author = {Shuyi Yu},
+  year = {2020},
+  note = {Available at SSRN: \url{https://ssrn.com/abstract=3584896} or \url{http://dx.doi.org/10.2139/ssrn.3584896}}
+}
+
+@article{gao,
+  title = {Property valuation using machine learning algorithms on statistical areas in Greater Sydney, Australia},
+  author = {Gao and Shi and Pettit and Han},
+  journal = {Land Use Policy},
+  volume = {123},
+  pages = {106409},
+  year = {2022},
+  issn = {0264-8377},
+  doi = {10.1016/j.landusepol.2022.106409},
+  url = {https://www.sciencedirect.com/science/article/pii/S0264837722004367}
+}
+
+@article{sarip,
+  title = {Application Of Fuzzy Regression Model For Real Estate Price Prediction},
+  author = {Sarip and Hafez and Daud},
+  journal = {Malaysian Journal of Computer Science},
+  volume = {29},
+  number = {1},
+  pages = {15--27},
+  year = {2016},
+  doi = {10.22452/mjcs.vol29no1.2}
+}
+
+@article{din,
+  author = {Din, Allan and Hoesli, Martin and Bender, André},
+  title = {Environmental Variables and Real Estate Prices},
+  journal = {Urban Studies},
+  volume = {38},
+  number = {11},
+  pages = {1989--2000},
+  year = {2001},
+  doi = {10.1080/00420980120080899}
+}
+
+@article{abelson,
+title = {Property prices and the value of amenities},
+author = {Peter W Abelson},
+journal = {Journal of Environmental Economics and Management},
+volume = {6},
+number = {1},
+pages = {11-28},
+year = {1979},
+issn = {0095-0696},
+doi = {https://doi.org/10.1016/0095-0696(79)90018-4},
+url = {https://www.sciencedirect.com/science/article/pii/0095069679900184},
+}
